--- a/application/raptor/authentication/login-reset-password.html
+++ b/application/raptor/authentication/login-reset-password.html
@@ -2,6 +2,9 @@
 <html lang="{{ localization.code ?? 'en' }}">
     <head>
         <meta charset="utf-8">
+        <!-- Хуудасны гарчиг
+             Хэрвээ controller-аас title дамжуулсан бол түүнийг ашиглана.
+             Үгүй бол localization ашиглан 'dashboard' гэсэн default текст. -->
         <title>{{ (title is not empty ? title : 'dashboard'|text)|e }}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         {% if description is not empty %}<meta name="description" content="{{ description|e }}">{% endif %}
@@ -16,7 +19,9 @@
         {% if config['og']['image'] is not empty %}<meta property="og:image" content="{{ config['og']['image']|e }}">{% endif %}
         {% if config['og']['url'] is not empty %}<meta property="og:url" content="{{ config['og']['url']|e }}">{% endif %}
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+         <!-- Хуудасны үндсэн layout-ын CSS (login-тэй ижил загвартай) -->
         <style>
+            /* Reset password form-ийн үндсэн томъёолол */
             .form-reset-password {
                 width: 100%;
                 max-width: 420px;
@@ -26,14 +31,25 @@
       </style>
     </head>
     <body class="text-center">
+        <!-- ============================================================
+             MAIN WRAPPER - Password Reset Card
+             ============================================================ -->
         <div class="form-reset-password">
             {% if logo is not empty %}
+            <!-- ---------------------------------------
+                 Лого - байгаа тохиолдолд
+                 --------------------------------------- -->
             <div class="text-center mb-4" id="logo">
                 <a href="{{ 'home'|link }}">
                     <img class="img-fluid" src="{{ logo }}">
                 </a>
             </div>
             {% endif %}
+            
+            <!-- ============================================================
+                 (1) Controller-аас "title" & "message" дамжсан бол → зориулалтын view
+                     Ихэвчлэн: Token expired / Invalid request / Password updated
+                 ============================================================ -->
             {% if title is defined and message is defined %}
             <div>
                 <h3>{{ title }}</h3>
@@ -42,6 +58,9 @@
                 <a class="btn btn-secondary shadow" href="{{ 'home'|link }}">{{ 'back'|text }}</a>
             </div>
             {% else %}
+            <!-- ============================================================
+                 (2) Эсрэг тохиолдолд → Password reset form
+                 ============================================================ -->
             <form action="{{ 'login-set-password'|link }}" method="POST" autocomplete="off">
                 <h3 class="text-center mb-4">{{ 'set-new-password'|text }}</h3>
                 <span>{{ 'fill-new-password'|text }}</span>
@@ -63,6 +82,7 @@
         </div>
         <script type="text/javascript">
             if (localStorage.getItem('data-bs-theme') === 'dark') {
+                // LocalStorage-т хадгалсан theme-г автоматаар хэрэглэнэ
                 document.body.setAttribute('data-bs-theme', 'dark');
             }
         </script>
