--- a/application/raptor/rbac/rbac-insert-permission-modal.html
+++ b/application/raptor/rbac/rbac-insert-permission-modal.html
@@ -1,4 +1,24 @@
+<!--
+    RBAC - Permission нэмэх modal
+
+    Энэ modal нь дараах зорилготой:
+      • Модулийн нэр (module/group) → сонгох эсвэл шууд бичих
+      • Permission name
+      • Permission description
+      • POST ашиглан server рүү permission үүсгэх
+      • Нэмэлт тохиргоо: dropdown-с module сонгох боломжтой
+
+    Гол хувьсагчид:
+      - alias  : RBAC-ийн хүрээ (system, news, organization гэх мэт)
+      - title  : Дээд гарчигт харуулах нэр
+      - modules: Өмнө нь бүртгэгдсэн module нэрсийн жагсаалт
+-->
+
 <style>
+    /* 
+        Тохируулж болдог select + input загвар.
+        Энд ашиглагдаагүй ч бусад хэсэг дээр хэрэг болох UI style.
+    */
     .select-editable {
         position:relative;
         background-color:white;
@@ -24,87 +44,183 @@
         font-size:12px;
         border:none;
     }
-    .select-editable select:focus, .select-editable input:focus {
+    .select-editable select:focus,
+    .select-editable input:focus {
         outline:none;
     }
 </style>
+
+<!-- Permission нэмэх modal-ийн үндсэн бүтэц -->
 <div class="modal-lg modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
+
+        <!-- Modal header -->
         <div class="modal-header">
             <h3 class="modal-title fs-6 text-uppercase text-success">Add Permission</h3>
             <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="{{ 'close'|text|e }}"></button>
         </div>
+
+        <!-- Modal body -->
         <div class="modal-body">
             <div style="height:400px;overflow-y:auto;overflow-x:hidden;">
-                <form class="needs-validation" novalidate autocomplete="off" id="rbac_permission_insert" role="form" action="{{ 'rbac-insert-permission'|link({'alias':alias}) }}?title={{ title|e }}" method="POST" enctype="multipart/form-data">
+
+                <!-- Permission insert FORM -->
+                <form
+                    class="needs-validation"
+                    novalidate
+                    autocomplete="off"
+                    id="rbac_permission_insert"
+                    role="form"
+                    action="{{ 'rbac-insert-permission'|link({'alias':alias}) }}?title={{ title|e }}"
+                    method="POST"
+                    enctype="multipart/form-data"
+                >
+
+                    <!-- MODULE (GROUP) оруулах хэсэг -->
                     <div class="form-group row">
                         <label class="col-3 form-label text-end">{{ 'group'|text }}</label>
                         <div class="col-9">
+
+                            <!-- Input + dropdown → module сонгох буюу бичих -->
                             <div class="input-group">
-                                <input class="form-control" name="module" maxlength="128" placeholder="" value="" type="text">
-                                <button class="btn btn-outline-success dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
+
+                                <!-- Module input -->
+                                <input
+                                    class="form-control"
+                                    name="module"
+                                    maxlength="128"
+                                    placeholder=""
+                                    value=""
+                                    type="text"
+                                >
+
+                                <!-- Dropdown toggle -->
+                                <button
+                                    class="btn btn-outline-success dropdown-toggle"
+                                    type="button"
+                                    data-bs-toggle="dropdown"
+                                    aria-expanded="false"
+                                ></button>
+
+                                <!-- Dropdown menu - өмнө бүртгэгдсэн module нэрс -->
                                 <ul class="dropdown-menu dropdown-menu-end" id="category_list">
                                 {% for item in modules %}
-                                    <li class="dropdown-item" value="{{ item['module']|e }}">{{ item['module'] }}</li>
+                                    <li class="dropdown-item" value="{{ item['module']|e }}">
+                                        {{ item['module'] }}
+                                    </li>
                                 {% endfor %}
                                 </ul>
+
                             </div>
                         </div>
                     </div>
+
+                    <!-- Name input -->
                     <div class="form-group row">
                         <label class="col-3 form-label text-end">{{ 'name'|text }}</label>
                         <div class="col-9">
-                            <input class="form-control" required autocomplete="off" maxlength="128" name="name" placeholder="" value="" type="text">
+                            <input
+                                class="form-control"
+                                required
+                                autocomplete="off"
+                                maxlength="128"
+                                name="name"
+                                placeholder=""
+                                value=""
+                                type="text"
+                            >
                         </div>
                     </div>
+
+                    <!-- Description input -->
                     <div class="form-group row">
                         <label class="col-3 form-label text-end">{{ 'description'|text }}</label>
                         <div class="col-9">
                             <textarea class="form-control" name="description"></textarea>
                         </div>
                     </div>
+
                 </form>
             </div>
         </div>
+
+        <!-- Modal footer -->
         <div class="modal-footer">
+
+            <!-- Submit button -->
             <button class="submit-new-permission btn btn-success shadow-sm">
-                <i class="la la-check"></i> <strong>{{ 'submit'|text }}</strong>
+                <i class="la la-check"></i>
+                <strong>{{ 'submit'|text }}</strong>
             </button>
-            <button class="btn btn-secondary shadow-sm" type="button" data-bs-dismiss="modal" type="button">
+
+            <!-- Close button -->
+            <button
+                class="btn btn-secondary shadow-sm"
+                type="button"
+                data-bs-dismiss="modal"
+            >
                 {{ 'back'|text }}
             </button>
         </div>
     </div>
 </div>
+
 <script type="text/javascript">
+    // Permission insert хэлбэрийн үндсэн form
     const formInsert = document.querySelector('form#rbac_permission_insert');
     if (!formInsert) {
+        // Form олдохгүй бол хэрэглэгчид мэдэгдэнэ
         NotifyTop('danger', `{{ 'error'|text|e }}`, 'Form not found!');
     } else {
+        /*
+            MODULE dropdown → module input-д утга хийх
+            --------------------------------------------------
+            Жишээ:
+              - 'news' module дээр permission нэмэх үед dropdown-с сонговол
+                input[name="module"] дотор тэр нэр автоматаар бичигдэнэ.
+        */
         const modules = formInsert.querySelectorAll('.dropdown-item');
-        modules.forEach(a => a.addEventListener('click', function () {
-            formInsert.querySelector('input[name="module"]').value = a.innerHTML;
-        }));
-        
+        modules.forEach(a =>
+            a.addEventListener('click', function () {
+                formInsert.querySelector('input[name="module"]').value = a.innerHTML;
+            })
+        );
+
+        // Submit товч - form.submit() биш, requestSubmit()
         const submitter = document.querySelector('button.submit-new-permission');
         submitter.addEventListener('click', function (e) {
             e.preventDefault();
             formInsert.requestSubmit();
         });
 
+        /*
+            FORM submit handler
+            -----------------------------------------------------
+              • HTML5 validation
+              • Хэрвээ алдаа байвал NotifyTop()
+              • fetch() → server рүү POST хүсэлт
+              • Success → хуудсыг refresh
+        */
         formInsert.addEventListener('submit', function (event) {
             event.preventDefault();
 
             const _valid = this.checkValidity();
             this.classList.add('was-validated');
+
             if (!_valid) {
                 event.stopPropagation();
-                return NotifyTop('danger', `{{ 'error'|text|e }}`, `{{ 'u-have-some-form-errors'|text|e }}`);
+                return NotifyTop(
+                    'danger',
+                    `{{ 'error'|text|e }}`,
+                    `{{ 'u-have-some-form-errors'|text|e }}`
+                );
             }
 
+            // Grow animation
             submitter.growNstop();
 
             const data = new FormData(this);
+            // Permission insert ajax request
             fetch(
                 this.action,
                 {
@@ -112,20 +228,28 @@
                     method: this.getAttribute('method') ?? 'POST'
                 }
             ).then(res => {
+                // JSON хариу шалгах
                 let contentType = res.headers.get('content-type') || '';
                 if (contentType.includes('application/json')) {
                     return res.json();
                 }
+
                 throw new Error("HTTP [{0}]: {1}".format(res.status, res.statusText));
             }).then(response => {
                 if (response.status !== 'success') {
                     throw new Error(response.message ? response.message : 'Invalid response!');
                 }
 
+                // Permission үүссэн → refresh
                 window.location.reload();
 
-                NotifyTop(response.type ?? 'success', response.title ?? `{{ 'success'|text|e }}`, response.message ?? 'Permission created');
+                NotifyTop(
+                    response.type ?? 'success',
+                    response.title ?? `{{ 'success'|text|e }}`,
+                    response.message ?? 'Permission created'
+                );
             }).catch(error => {
+                // Алдаа мэдэгдэх
                 NotifyTop('danger', `{{ 'error'|text|e }}`, error.message);
                 submitter.growNstop();
             });
